# arnoldi-distribuito

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  psblas-example.f90
.github/workflows/: make.yml
matrices/laplacian/: julia-laplaciano.jl  laplacian-discretization-3d.mat
